syntax = "proto3";

package protos;
option go_package = "../protos";

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
  optional string action_code = 51232;
}

enum ActionsEnum{
  HEALTH_CHECK         = 0 [(action_code) = "A0000"];
  NEW_SESSION          = 1 [(action_code) = "A0001"];

  DOWNLOAD_VIDEO_AUDIO = 2 [(action_code) = "A1001"];
  DOWNLOAD_VIDEO       = 3 [(action_code) = "A1002"];
  DOWNLOAD_AUDIO       = 4 [(action_code) = "A1003"];

  LIST_FILES           = 5 [(action_code) = "A2000"];
  SEND_FILE_TO_CLIENT  = 6 [(action_code) = "A2001"];

  DELETE_FILE          = 7 [(action_code) = "A3000"];
  DELETE_SESSION       = 8 [(action_code) = "A3001"];
}